--- a/rapport.tex
+++ b/rapport.tex
@@ -2,7 +2,7 @@
 % Le template fourni a été utilisé pour rédiger cet article.
 
 
-\documentclass[10pt]{article}
+\documentclass[11pt]{article}
 \usepackage[utf8]{inputenc} 
 %\usepackage[francais]{babel}
 
@@ -128,6 +128,32 @@ On appelle \emph{une différence finie à p points} une combinaison linéaire de
 
 
 \section{Résolution du problème en dimension 1}
+
+\quad Revenons à l'introduction de cet article : nous avions vu que pour $u \in C^2 [0, 1]$ satisfaisant l'équation (1), on avait $u$ de la forme (4).  Pour retrouver la fonction de Greene, nous devons intégrer par parties $\int_0^x F\relax(s) ds$ : 
+\begin{equation}
+\int_0^x F\relax(s) ds = [sF\relax(s)]_0^x - \int_0^x sF'\relax(s) ds = \int_0^x(x-s)f\relax(s)ds
+\end{equation}
+
+D'après (2), les constantes $c_1$ et $c_2$ sont respectivement égales à $0$ et $\int_0^1(1-s)f\relax(s)ds$.  On peut alors écrire $u$ sous la forme
+\begin{equation}
+u\relax(x) = x \int_0^1(1-s)f\relax(s)ds - \int_0^x (x-s)f\relax(s)ds = \int_0^1 G\relax(x, s) f\relax(s) ds
+\end{equation}
+avec 
+\begin{equation}
+G\relax(x, s) = \left\{
+    \begin{array}{ll}
+        s(1-x) \espace s\in [0,x] \\
+        x(1-s) \espace s\in [x, 1]
+    \end{array}
+\right.
+\end{equation}
+On remarquera qu'on a continuité de la fonction $G$ pour $s = x$, et que G est une fonction \emph{affine} de $x$ à $s$ fixé, et de $s$ à $x$ fixé. Elle se nomme \emph{Fonction de Greene} pour le problème aux limites défini par (1) et (2).
+
+\subsection{Fonction de Greene}
+\quad La fonction de Greene est continue et symétrique sur $[0,1]^2$, ainsi que positive non strictement ($G(x,s) = 0 \Longleftrightarrow x = 0 \lor s = 0$). Son existence dans le problème générique (1) (nous verrons plus tard des applications précises du problème comme la déformation d'une corde élastique) est assurée par sa définition sur tout l'intervalle entre les limites (dans notre cas, (2) mais on pourrait fixer d'autres limites). \\ \\
+\quad On voit alors que lorsque $G$ existe et qu'elle est connue formellement, on peut écrire explicitement les soutions du problème aux limites dans une forme très simple.  Un des principaux avantages de la représentation (9) des solutions du problème est qu'elle élimine la dépendance au terme $f(s)$, qui n'est dépendant que de l'équation différentielle en (1) et des limites qui nous sont imposées : une fois que l'on aura déterminé $G$, les solutions seront connues selon $f(s)$ pour peu pqu'on puisse écrire les solutions sous la forme (9). Nous verrons dans les applications que cette forme n'est pas forcément admissible sous toutes les conditions. \\
+\quad De plus, la forme intégrale (9) est bien plus propice à l'analyse numérique que l'équation différentielle (1), ce qui rend le traitement par ordinateur bien plus simple et efficace.
+
 
 
 \section{Introduction à la résolution du problème en dimension 2}
