résolution pb git

--- a/rapport.tex
+++ b/rapport.tex
@@ -318,6 +318,8 @@ On peut alors écrire l'inégalité comme
 	(L_h u_h , u_h )_h = (f, u_h)_h
 \end{equation}
 
+On en est ici à la page 427 de quarteroni
+
 
 
 
